--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@electron/fuses": "^1.8.0",
     "@types/better-sqlite3": "^7.6.12",
     "@types/electron-squirrel-startup": "^1.0.2",
+    "@types/mime": "^3.0.4",
     "@types/react": "^18.3.14",
     "@types/react-dom": "^18.3.2",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
@@ -55,16 +56,21 @@
     "vitest": "^4.0.16"
   },
   "dependencies": {
+    "@google/genai": "^1.34.0",
+    "@google/generative-ai": "^0.24.1",
     "@tanstack/react-query": "^5.62.11",
     "better-sqlite3": "^12.5.0",
+    "bufferutil": "^4.1.0",
     "electron-log": "^5.2.4",
     "electron-squirrel-startup": "^1.0.1",
     "electron-store": "^10.0.0",
     "lucide-react": "^0.562.0",
+    "mime": "^4.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.1",
     "ulid": "^2.3.0",
+    "utf-8-validate": "^6.0.6",
     "zod": "^3.24.1",
     "zustand": "^5.0.2"
   }
