--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
   "dependencies": {
     "@google/genai": "^1.34.0",
     "@google/generative-ai": "^0.24.1",
+    "@huggingface/transformers": "^3.8.1",
     "@tanstack/react-query": "^5.62.11",
     "better-sqlite3": "^12.5.0",
     "bufferutil": "^4.1.0",
