--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "@types/mime": "^3.0.4",
     "@types/react": "^18.3.14",
     "@types/react-dom": "^18.3.2",
+    "@types/react-virtualized-auto-sizer": "^1.0.4",
+    "@types/react-window": "^1.8.8",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "@vitejs/plugin-react": "^4.3.4",
@@ -60,6 +62,7 @@
     "@google/generative-ai": "^0.24.1",
     "@huggingface/transformers": "^3.8.1",
     "@tanstack/react-query": "^5.62.11",
+    "@tanstack/react-virtual": "^3.13.14",
     "better-sqlite3": "^12.5.0",
     "bufferutil": "^4.1.0",
     "electron-log": "^5.2.4",
@@ -70,6 +73,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.1",
+    "react-virtualized-auto-sizer": "^2.0.1",
+    "react-window": "^2.2.3",
     "ulid": "^2.3.0",
     "utf-8-validate": "^6.0.6",
     "zod": "^3.24.1",
