--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "electron-log": "^5.2.4",
     "electron-squirrel-startup": "^1.0.1",
     "electron-store": "^10.0.0",
+    "form-data": "^4.0.5",
     "lucide-react": "^0.562.0",
     "mime": "^4.1.0",
     "react": "^18.3.1",
